<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Common.LoginSignUp.RetailerSignUpTwo">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/two_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:src="@drawable/back" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/baloo"
        android:layout_centerVertical="true"
        android:text="@string/RetailerSignUp"
        android:textColor="@android:color/black"
        android:textSize="40sp" />

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/slider">

            <TextView
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="2/3"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                app:fontFamily="@font/black_ops_one" />
        </RelativeLayout>
        </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/gendermale" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/genderfemale" />

            <RadioButton
                android:id="@+id/other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/genderother" />
        </RadioGroup>
        <View
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DOB"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_marginTop="20dp"/>
        <DatePicker
            android:id="@+id/age_picker"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:calendarTextColor="@android:color/black"
            android:spinnersShown="true"/>


    </LinearLayout>

    <Button
        android:id="@+id/next_three"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:onClick="callSignUpThree"
        android:background="#000000"
        android:text="@string/Next"
        android:textColor="@android:color/white" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="#00000000"
        android:text="@string/LoginPageLogin"
        android:textColor="@android:color/black" />

</LinearLayout>
</ScrollView>