<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F8FF"
    android:padding="10dp"
    tools:context=".Common.LoginSignUp.OtpVerify">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/cancel"
            android:tint="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/aldrich"
            android:gravity="center_horizontal"
            android:includeFontPadding="false"
            android:text="@string/CODE"
            android:textColor="@android:color/black"
            android:textSize="100sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/aldrich"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/verification"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/ropa_sans"
            android:gravity="center_horizontal"
            android:text="@string/enterotp"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <com.chaos.view.PinView
            android:id="@+id/pinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:itemCount="6"
            app:itemWidth="40dp"
            app:itemHeight="50dp"

            app:lineColor="@android:color/black"
            style="@style/PinWidget.PinView"
            android:itemBackground="@android:color/white"
            android:layout_gravity="center"
            android:inputType="number"
            android:cursorVisible="true"
            app:cursorColor="@android:color/black"
            app:hideLineWhenFilled="true"
            app:itemRadius="5dp"/>
        <Button
            android:id="@+id/nextFromOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonslayout"
            android:text="@string/verification"
            android:onClick="callNextFromOtp"
            android:fontFamily="@font/aldrich"
            android:textSize="20sp"
            android:layout_marginTop="30dp"/>

        <Button
            android:id="@+id/loginotp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="#00000000"
            android:text="@string/LoginPageLogin"
            android:textColor="@android:color/black"
            android:fontFamily="@font/aldrich"
            android:textSize="20sp"
            android:visibility="invisible"/>


    </LinearLayout>


</ScrollView>