<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".Common.OnBoarding">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#F0F8FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </androidx.viewpager.widget.ViewPager>

    <Button
        android:onClick="skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="@string/Skip"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableEnd="@drawable/skip_icon"
        android:drawableRight="@drawable/skip_icon" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/getstarted_button"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
           android:layout_above="@id/next_button"
            android:background="#0277BD"
            android:text="@string/started"
            android:visibility="invisible" />
        <LinearLayout

            android:id="@+id/dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingBottom="20dp"
            android:orientation="horizontal" />
        <Button
            android:visibility="visible"
            android:id="@+id/next_button"
            android:onClick="next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:paddingBottom="30dp"
            android:fontFamily="@font/ropa_sans"
            android:text="@string/Next"
            android:textColor="@android:color/black"
            android:background="#00000000"/>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>