<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".Common.LoginSignUp.LoginSignUp">


    <!--    <ImageView-->
    <!--        android:id="@+id/login_back"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:background="@drawable/back"-->
    <!--        android:padding="15dp" />-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="150dp"
                android:background="@drawable/ic_baseline_panorama_fish_eye_24"
                android:elevation="8dp"
                android:orientation="vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="90dp"
                android:fontFamily="@font/croissant_one"
                android:text="@string/Grow"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp">

                <Button
                    android:id="@+id/startpage_Login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:transitionName="transition_login"
                    android:layout_weight="1"
                    android:background="@drawable/buttonslayout"
                    android:text="@string/LoginPageLogin"
                    android:textSize="20sp"
                    android:fontFamily="@font/aldrich"
                    android:onClick="callLoginScreen"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/startpage_signup"
                    android:layout_width="0dp"
                    android:onClick="callSignUpScreen"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttonslayout"
                    android:text="@string/LoginPageSignup"
                    android:fontFamily="@font/aldrich"
                    android:transitionName="trans_signup"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>