<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Common.LoginSignUp.RetailerSignupThree">

    <ImageView
        android:id="@+id/signUpBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:src="@drawable/back" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/baloo"
            android:text="@string/RetailerSignUp"
            android:textColor="@android:color/black"
            android:textSize="40sp" />

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/slider">

            <TextView
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="2/2"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:fontFamily="@font/black_ops_one" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <com.hbb20.CountryCodePicker
            android:id="@+id/countryCodePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/countrypicker"
            app:ccp_autoDetectCountry="true"
            app:ccp_defaultNameCode="Kenya"
            app:ccp_defaultPhoneCode="254"
            app:ccp_showFlag="true"
            app:ccp_showFullName="true"
            app:ccp_showNameCode="true"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="PhoneNumber"
            android:textColorHint="@android:color/black"
            app:boxStrokeColor="@android:color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:hintTextColor="@android:color/black"
            app:startIconDrawable="@drawable/phone"
            app:startIconTint="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textCursorDrawable="@null" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/next_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/loginblacks"
            android:onClick="callVerifyOtp"
            android:text="@string/Next"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/loginthree"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="#00000000"
            android:text="@string/LoginPageLogin"
            android:textColor="@android:color/black" />

    </LinearLayout>

</LinearLayout>